[gd_scene load_steps=2 format=2]

[ext_resource path="res://Crew/CrewSetup.gd" type="Script" id=2]

[node name="CrewSetup" type="Popup"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -512.0
margin_top = -300.0
margin_right = 512.0
margin_bottom = 300.0
popup_exclusive = true
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -281.5
margin_top = -255.5
margin_right = 281.5
margin_bottom = 255.5
color = Color( 0.196078, 0.0980392, 0.27451, 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SetupPages" type="MarginContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -268.0
margin_top = -250.0
margin_right = 268.0
margin_bottom = 250.0
rect_min_size = Vector2( 500, 500 )
custom_constants/margin_right = 10
custom_constants/margin_top = 10
custom_constants/margin_left = 10
custom_constants/margin_bottom = 10
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CrewChoices-1" type="VBoxContainer" parent="SetupPages"]
margin_left = 10.0
margin_top = 10.0
margin_right = 526.0
margin_bottom = 490.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LineEdit" type="LineEdit" parent="SetupPages/CrewChoices-1"]
margin_right = 516.0
margin_bottom = 24.0
align = 1
placeholder_text = "What is your crew name?"

[node name="Label3" type="Label" parent="SetupPages/CrewChoices-1"]
margin_top = 36.0
margin_right = 516.0
margin_bottom = 50.0
text = "You start with 2 coins to form the crew, spend them wisely. "

[node name="Label" type="Label" parent="SetupPages/CrewChoices-1"]
margin_top = 62.0
margin_right = 516.0
margin_bottom = 76.0
text = "Choose a crew type:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="crew_type" type="OptionButton" parent="SetupPages/CrewChoices-1"]
margin_top = 88.0
margin_right = 516.0
margin_bottom = 108.0
text = "Crew Type"
items = [ "Assassins", null, false, 0, null, "Bravos", null, false, 1, null, "Cult", null, false, 2, null, "Hawkers", null, false, 3, null, "Shadows", null, false, 4, null, "Smugglers", null, false, 5, null ]
selected = 0

[node name="Label2" type="Label" parent="SetupPages/CrewChoices-1"]
margin_top = 120.0
margin_right = 516.0
margin_bottom = 168.0
text = "This determines the scores you'll focus on, as well as your default special abilities, claims, and other game mechanics. Everything can be edited after creation as determined by the GM and the group."
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator3" type="HSeparator" parent="SetupPages/CrewChoices-1"]
margin_top = 180.0
margin_right = 516.0
margin_bottom = 184.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="SetupPages/CrewChoices-1"]
margin_top = 196.0
margin_right = 516.0
margin_bottom = 210.0
text = "Choose an inital reputation:"
align = 1

[node name="reputation" type="OptionButton" parent="SetupPages/CrewChoices-1"]
margin_top = 222.0
margin_right = 516.0
margin_bottom = 242.0
text = "Ambitious"
items = [ "Ambitious", null, false, 0, null, "Brutal", null, false, 1, null, "Daring", null, false, 2, null, "Honorable", null, false, 3, null, "Professional", null, false, 4, null, "Savvy", null, false, 5, null, "Subtle", null, false, 6, null, "Strange", null, false, 7, null ]
selected = 0

[node name="HSeparator" type="HSeparator" parent="SetupPages/CrewChoices-1"]
margin_top = 254.0
margin_right = 516.0
margin_bottom = 258.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label5" type="Label" parent="SetupPages/CrewChoices-1"]
margin_top = 270.0
margin_right = 516.0
margin_bottom = 284.0
text = "Choose an inital lair:"
align = 1

[node name="lair" type="OptionButton" parent="SetupPages/CrewChoices-1"]
margin_top = 296.0
margin_right = 516.0
margin_bottom = 316.0
text = "A half-sunken grotto in the city's maze-like underground canals."
items = [ "A half-sunken grotto in the city's maze-like underground canals.", null, false, 0, null, "A small, abondoned house at the end of a dark lane.", null, false, 1, null, "An abandoned watch tower atop an ancient, crumbling wall.", null, false, 2, null, "A rickety, tin-roofed shack perched on a rooftop.", null, false, 3, null, "The unassuming back rooms of a merchant's shop.", null, false, 4, null, "A junked rail-car, rusted in place on its old, overgrown tracks.", null, false, 5, null, "An crumbling, old church overlooking a wayward canal. ", null, false, 6, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="lair_location" type="OptionButton" parent="SetupPages/CrewChoices-1"]
margin_top = 328.0
margin_right = 516.0
margin_bottom = 348.0
text = "Lair Location"

[node name="NextButton" type="Button" parent="SetupPages/CrewChoices-1"]
margin_top = 460.0
margin_right = 516.0
margin_bottom = 480.0
size_flags_vertical = 10
text = "Next"

[node name="CrewChoices-2" type="VBoxContainer" parent="SetupPages"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 526.0
margin_bottom = 490.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="SetupPages/CrewChoices-2"]
margin_right = 516.0
margin_bottom = 14.0
text = "Establish your hunting grounds."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="hunting_grounds" type="OptionButton" parent="SetupPages/CrewChoices-2"]
margin_top = 26.0
margin_right = 516.0
margin_bottom = 46.0
text = "Hunting Ground Location"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextEdit" type="TextEdit" parent="SetupPages/CrewChoices-2"]
margin_top = 58.0
margin_right = 516.0
margin_bottom = 154.0
size_flags_horizontal = 3
size_flags_vertical = 3
text = "Describe your hunting grounds. What part of the above district is it located in? Why do you prefer it or what gives your crew an advantage here?"

[node name="Label7" type="Label" parent="SetupPages/CrewChoices-2"]
margin_top = 166.0
margin_right = 516.0
margin_bottom = 282.0
text = "Your hunting grounds are a small part of a district, the area you normally target for your scores. This is an area your crew knows well. 
When you prepare to execute an operation of your preferred type on your hunting grounds, you get +1d to any gather information rolls and a free addtional downtime activity to contribute to that operation.

This will expand as you get turf."
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HSeparator" type="HSeparator" parent="SetupPages/CrewChoices-2"]
margin_top = 294.0
margin_right = 516.0
margin_bottom = 298.0

[node name="Label" type="Label" parent="SetupPages/CrewChoices-2"]
margin_top = 310.0
margin_right = 516.0
margin_bottom = 324.0
text = "What is your preferred opration type?"
align = 1
autowrap = true

[node name="OptionButton" type="OptionButton" parent="SetupPages/CrewChoices-2"]
margin_top = 336.0
margin_right = 516.0
margin_bottom = 356.0
text = "Operation Type"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="NextButton" type="Button" parent="SetupPages/CrewChoices-2"]
margin_top = 460.0
margin_right = 516.0
margin_bottom = 480.0
size_flags_vertical = 10
text = "Next"

[node name="CrewChoices-3" type="VBoxContainer" parent="SetupPages"]
visible = false
margin_left = 10.0
margin_top = 10.0
margin_right = 526.0
margin_bottom = 490.0
custom_constants/separation = 12
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label6" type="Label" parent="SetupPages/CrewChoices-3"]
margin_right = 516.0
margin_bottom = 14.0
text = "What's your crew's special ability?"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="SetupPages/CrewChoices-3"]
margin_top = 26.0
margin_right = 516.0
margin_bottom = 46.0
hint_tooltip = "Every crew is a snowflake. What makes yours special?"
text = "Crew Abilities"

[node name="HSeparator2" type="HSeparator" parent="SetupPages/CrewChoices-3"]
margin_top = 58.0
margin_right = 516.0
margin_bottom = 62.0

[node name="Label7" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 74.0
margin_right = 516.0
margin_bottom = 88.0
text = "Choose intial crew upgrades:"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label8" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 100.0
margin_right = 516.0
margin_bottom = 114.0
text = "Starting upgrades:"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initial_upgrade1" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 126.0
margin_right = 516.0
margin_bottom = 140.0
text = "upgrade 1"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="initial_upgrade2" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 152.0
margin_right = 516.0
margin_bottom = 166.0
text = "upgrade 2"
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton3" type="OptionButton" parent="SetupPages/CrewChoices-3"]
margin_top = 178.0
margin_right = 516.0
margin_bottom = 198.0
hint_tooltip = "Every crew is a snowflake. What makes yours special?"
text = "Upgrade 3"

[node name="OptionButton2" type="OptionButton" parent="SetupPages/CrewChoices-3"]
margin_top = 210.0
margin_right = 516.0
margin_bottom = 230.0
hint_tooltip = "Every crew is a snowflake. What makes yours special?"
text = "Upgrade 4"

[node name="HSeparator3" type="HSeparator" parent="SetupPages/CrewChoices-3"]
margin_top = 242.0
margin_right = 516.0
margin_bottom = 246.0

[node name="Label" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 258.0
margin_right = 516.0
margin_bottom = 272.0
text = "No crew is an island. Who helped you get to where you are?"
align = 1

[node name="OptionButton4" type="OptionButton" parent="SetupPages/CrewChoices-3"]
margin_top = 284.0
margin_right = 516.0
margin_bottom = 304.0
hint_tooltip = "Every crew is a snowflake. What makes yours special?"
text = "Favorite Contact"

[node name="HSeparator4" type="HSeparator" parent="SetupPages/CrewChoices-3"]
margin_top = 316.0
margin_right = 516.0
margin_bottom = 320.0

[node name="Label3" type="Label" parent="SetupPages/CrewChoices-3"]
margin_top = 434.0
margin_right = 516.0
margin_bottom = 448.0
size_flags_vertical = 10
text = "Your crew begins at Tier 0, with a STRONG hold and 0 REP points."
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FinishedButton" type="Button" parent="SetupPages/CrewChoices-3"]
margin_top = 460.0
margin_right = 516.0
margin_bottom = 480.0
text = "Finished"

[connection signal="pressed" from="SetupPages/CrewChoices-1/NextButton" to="." method="_on_next"]
[connection signal="pressed" from="SetupPages/CrewChoices-2/NextButton" to="." method="_on_next"]
[connection signal="pressed" from="SetupPages/CrewChoices-3/FinishedButton" to="." method="_on_FinishedButton_pressed"]
